--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,12 +28,17 @@
   line-height: 1.15;
   font-size: 4rem;
   color: white;
-  /* opacity: 0.85; */
 }
 
 .title,
 .description {
   text-align: center;
+}
+
+@media (max-width: 640px) {
+  .title {
+    font-size: 2.5rem;
+  }
 }
 
 .description {
