removed ismobile in favor of tailwind media styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,17 @@ a {
     background: black;
   }
 }
+
+.mobile {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .mobile {
+    display: block;
+  }
+
+  .desktop {
+    display: none;
+  }
+}
